apps/operators/incubator/security/teleport/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teleport-loadbalancer-service
spec:
  ports:
  - name: app
    port: 443
    protocol: TCP
    targetPort: 443
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: teleport-loadbalancer-service
subsets:
- addresses:
  - ip: 10.130.5.231
  ports:
  - name: app
    port: 443
    protocol: TCP
