apps/operators/incubator/security/teleport/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teleport-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true" # This annotation enables SSL passthrough
spec:
  rules:
    - host: teleport.kubelize.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: teleport
                port:
                  number: 443
